--- a/episode_4_git/Pepr.Rmd
+++ b/episode_4_git/Pepr.Rmd
@@ -9,22 +9,21 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Introduction
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+So this is a RMarkdown document, eh? Let's see if we can commit it to Git.
 
 ```{r cars}
-summary(cars)
+mean(cars$speed)
+
 ```
 
-## Including Plots
+## Methods
 
-You can also embed plots, for example:
+I will try to explain how to commit to Git. That rhymes. 
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r pressure, echo=TRUE}
+plot(cars$speed)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
